--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -9,9 +9,7 @@ permissions:
   pull-requests: write
 jobs:
   release-please:
-    # FIXME: Temporary self-hosted only; original runs-on preserved below
-    # runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
     - uses: googleapis/release-please-action@c2a5a2bd6a758a0937f1ddb1e8950609867ed15c
       with:
