feat(publish): pin groovy-lsp v0.2.0 and enforce lsp bundling (#36)
* chore: pin groovy lsp v0.2.0 for publish
* chore: clarify prepare-server error handling
* chore: verify groovy-lsp checksum and document updates
* docs: remove emoji from contributing footer
* chore: harden prepare-server checksum handling
* feat: allow opting into latest groovy-lsp release
* chore: log cleanup failures when removing bad jars

--- a/editors/code/.github/workflows/main.yml
+++ b/editors/code/.github/workflows/main.yml
@@ -43,7 +43,9 @@ jobs:
         uses: actions/cache@v4
         if: matrix.os == 'ubuntu-latest'
         with:
-          path: server/groovy-lsp.jar
+          path: |
+            server/groovy-lsp.jar
+            server/.groovy-lsp-version
           key: groovy-lsp-${{ runner.os }}-${{ steps.groovy_lsp_cache.outputs.tag }}-${{ steps.groovy_lsp_cache.outputs.hash }}
 
       - name: Install dependencies
