chore: grant nightly release permissions (#41)

--- a/editors/code/.github/workflows/nightly.yml
+++ b/editors/code/.github/workflows/nightly.yml
@@ -27,6 +27,8 @@ on:
 
 jobs:
   nightly:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     env:
       REQUIRE_SERVER_BUNDLE: true
