--- a/editors/code/.vscodeignore
+++ b/editors/code/.vscodeignore
@@ -1,16 +1,34 @@
 .vscode/**
 .vscode-test/**
-client/src/**
-tools/**
-.gitignore
-.yarnrc
-tsconfig.json
-**/*.map
-**/*.ts
-!server/groovy-lsp.jar
-node_modules/
-.eslintrc.json
+.gemini/**
 .git/
 .github/
 .DS_Store
 *.log
+.aider.conf.yml
+.eslintrc.json
+.release-please-config.json
+.release-please-manifest.json
+.yarnrc
+AGENTS.md
+CLAUDE.md
+COPILOT.md
+commitlint.config.js
+esbuild.js
+eslint.config.mjs
+renovate.json
+.gitignore
+package-lock.json
+yarn.lock
+tsconfig.json
+client/src/**
+client/node_modules/**
+client/package-lock.json
+client/package.json
+client/tsconfig.json
+client/tsconfig.tsbuildinfo
+tools/**
+**/*.map
+**/*.ts
+!server/groovy-lsp.jar
+node_modules/
