feat: add optional wait steps with peek-ahead optimization for e2e tests
## Problem
Definition-jar test needs to handle both warm and cold CI cache scenarios:
- Warm cache: "Dependencies loaded" arrives in ~5s (no download)
- Cold cache: "Downloading Gradle distribution" → "Dependencies loaded" takes 180s

Without conditional flow support, we faced two bad options:
1. Wait 180s always → slow on warm cache
2. Separate scenarios → duplication and complexity

## Solution: Optional Steps with Peek-Ahead

Implemented `optional: true` flag for WaitNotification steps that:
✅ Skips early if next step's notification already arrived (warm cache)
✅ Waits full timeout if needed (cold cache)
✅ Doesn't fail test on timeout (graceful degradation)

### Key Innovation: Peek-Ahead Optimization

Before waiting for optional step, peek ahead to see if NEXT step's notification
has already arrived. If yes, skip immediately instead of waiting full timeout.

**Warm cache flow:**
1. Wait for "Downloading Gradle" (optional, 180s timeout)
2. "Dependencies loaded" arrives after 5s
3. **Peek detects it → skip optional step instantly**
4. Proceed to consume "Dependencies loaded"
**Total time: ~5s** ✅

**Cold cache flow:**
1. Wait for "Downloading Gradle" (optional, 180s timeout)
2. "Downloading Gradle" arrives after 5s → consume
3. Wait for "Dependencies loaded" (60s timeout)
4. "Dependencies loaded" arrives after 120s → consume
**Total time: ~125s** ✅

## Implementation

1. **Scenario.kt**: Added `optional: Boolean = false` to WaitNotification

2. **HarnessLanguageClient.kt**: Added `peekNotification()` method
   - Non-consuming check for notification existence
   - Thread-safe with lock protection
   - Used for peek-ahead logic

3. **ScenarioExecutor.kt**: Enhanced step execution
   - Pass next step to performWaitNotification
   - If optional && next is WaitNotification → peek ahead
   - Skip if next notification already available
   - Catch TimeoutException and continue if optional

4. **defin

--- a/tests/e2e/resources/scenarios/definition-jar.yaml
+++ b/tests/e2e/resources/scenarios/definition-jar.yaml
@@ -44,6 +44,19 @@ steps:
             value: 'Resolving Gradle dependencies'
       timeoutMs: 10000
 
+  # Optional: Gradle distribution download (only on cold CI, can take 60-180s)
+  # Skips early if "Dependencies loaded" arrives (warm cache scenario)
+  - waitNotification:
+      method: window/showMessage
+      checks:
+        - jsonPath: '$.message'
+          expect:
+            type: 'CONTAINS'
+            value: 'Downloading Gradle distribution'
+      timeoutMs: 180000
+      optional: true
+
+  # After download completes (or skipped), dependency resolution should complete
   - waitNotification:
       method: window/showMessage
       checks:
