docs: mark flaky tests and update AGENTS.md
- Mark ASTCompletionIntegrationTest, GroovyLanguageServerFeatureMatrixTest, and signature-help.yaml as flaky
- Add flaky test marking instruction to AGENTS.md

--- a/tests/e2e/resources/scenarios/signature-help.yaml
+++ b/tests/e2e/resources/scenarios/signature-help.yaml
@@ -1,6 +1,6 @@
-
+# FIXME: Flaky test due to timeout
 name: signature-help
-description: Request signature help for a simple method call.
+description: "Verify signature help functionality"
 workspace:
   fixture: signature-help
 steps:
