chore(main): release 0.1.0-alpha.0 (#28)

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-groovy",
   "displayName": "Groovy Language Support",
   "description": "Language support for Apache Groovy, Gradle, and Jenkins Pipeline",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha.0",
   "publisher": "albertocavalcante",
   "license": "Apache-2.0",
   "engines": {
