--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,10 @@ jackson = "2.20.1"
 jqwik = "1.9.3"
 jsonPath = "2.10.0"
 classgraph = "4.8.184"
+dependencyAnalysis = "3.5.1"
+proguardGradle = "7.8.2"
+jna = "5.18.1"
+openrewriteJgit = "1.3.0"
 
 [libraries]
 # Plugins (libraries for plugins block)
@@ -84,6 +88,10 @@ jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-
 
 # Classpath Scanning
 classgraph = { module = "io.github.classgraph:classgraph", version.ref = "classgraph" }
+proguard-gradle = { module = "com.guardsquare:proguard-gradle", version.ref = "proguardGradle" }
+jna = { module = "net.java.dev.jna:jna", version.ref = "jna" }
+jna-platform = { module = "net.java.dev.jna:jna-platform", version.ref = "jna" }
+openrewrite-jgit = { module = "org.openrewrite.tools:jgit", version.ref = "openrewriteJgit" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -95,4 +103,4 @@ sonarqube = { id = "org.sonarqube", version.ref = "sonarqube" }
 shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
 gitHooks = { id = "org.danilopianini.gradle-pre-commit-git-hooks", version.ref = "gitHooks" }
 jmh = { id = "me.champeau.jmh", version.ref = "jmh" }
-
+dependency-analysis = { id = "com.autonomousapps.dependency-analysis", version.ref = "dependencyAnalysis" }
