fix: resolve e2e test failures in definition-jar and gradle-hover-deps
- Fix definition-jar: Update expected notification message to match server output ('Resolving build dependencies').

- Fix gradle-hover-deps: Increase scenario shutdown timeout to 60s to account for slow Gradle daemon termination on CI.

--- a/tests/e2e/resources/scenarios/definition-jar.yaml
+++ b/tests/e2e/resources/scenarios/definition-jar.yaml
@@ -41,7 +41,7 @@ steps:
         - jsonPath: '$.message'
           expect:
             type: 'CONTAINS'
-            value: 'Resolving Gradle dependencies'
+            value: 'Resolving build dependencies'
       timeoutMs: 10000
 
   # Optional: Gradle distribution download (only on cold CI, can take 60-180s)
