--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,8 @@ dependencyAnalysis = "3.5.1"
 proguardGradle = "7.8.2"
 jna = "5.18.1"
 openrewriteJgit = "1.3.0"
+mavenEmbedder = "3.9.11"
+mavenResolver = "1.9.22"
 
 [libraries]
 # Plugins (libraries for plugins block)
@@ -93,6 +95,12 @@ proguard-gradle = { module = "com.guardsquare:proguard-gradle", version.ref = "p
 jna = { module = "net.java.dev.jna:jna", version.ref = "jna" }
 jna-platform = { module = "net.java.dev.jna:jna-platform", version.ref = "jna" }
 openrewrite-jgit = { module = "org.openrewrite.tools:jgit", version.ref = "openrewriteJgit" }
+
+# Maven Embedder (for programmatic dependency resolution)
+maven-embedder = { module = "org.apache.maven:maven-embedder", version.ref = "mavenEmbedder" }
+maven-compat = { module = "org.apache.maven:maven-compat", version.ref = "mavenEmbedder" }
+maven-resolver-connector-basic = { module = "org.apache.maven.resolver:maven-resolver-connector-basic", version.ref = "mavenResolver" }
+maven-resolver-transport-http = { module = "org.apache.maven.resolver:maven-resolver-transport-http", version.ref = "mavenResolver" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
