fix(e2e): use local source JAR for definition-jar test
Replace Maven-dependent test with local fixture:
- Create testlib.jar + testlib-sources.jar with Greeter class
- Add resolveSourceJar with adjacent -sources.jar fallback
- Update definition-jar scenario to use Greeter and expect extracted source
- Remove old pipeline-unit-stubs.jar

This keeps E2E tests offline-capable while properly testing
that go-to-definition navigates to extracted .java source files.

--- a/tests/e2e/resources/workspaces/gradle-dependency/build.gradle
+++ b/tests/e2e/resources/workspaces/gradle-dependency/build.gradle
@@ -9,6 +9,7 @@ repositories {
 }
 
 dependencies {
-    implementation name: 'pipeline-unit-stubs'
+    // Local test library with source JAR for E2E definition testing
+    implementation name: 'testlib'
     implementation localGroovy()
 }
