--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,6 +36,7 @@ jna = "5.18.1"
 openrewriteJgit = "1.3.0"
 mavenEmbedder = "3.9.11"
 mavenResolver = "1.9.25"
+javaparser = "3.26.4"
 
 [libraries]
 # Plugins (libraries for plugins block)
@@ -95,6 +96,9 @@ proguard-gradle = { module = "com.guardsquare:proguard-gradle", version.ref = "p
 jna = { module = "net.java.dev.jna:jna", version.ref = "jna" }
 jna-platform = { module = "net.java.dev.jna:jna-platform", version.ref = "jna" }
 openrewrite-jgit = { module = "org.openrewrite.tools:jgit", version.ref = "openrewriteJgit" }
+
+# Java Source Parsing
+javaparser-core = { module = "com.github.javaparser:javaparser-core", version.ref = "javaparser" }
 
 # Maven Embedder (for programmatic dependency resolution)
 maven-embedder = { module = "org.apache.maven:maven-embedder", version.ref = "mavenEmbedder" }
